Added the inbox item overview

--- a/android-app/app/src/main/res/values/strings.xml
+++ b/android-app/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">TU/e GO</string>
     <string name="login">Log in</string>
+    <string name="registration_warning">By clicking the Register button below, you accept to agree to the Terms and Conditions.</string>
     <string name="guess_correct">Congratulations, you guessed the location!</string>
     <string name="guess_correct_points">You earned 10 studypoints.</string>
     <string name="guess_incorrect">Too bad, you did not guess the location.</string>
