--- a/android-app/app/src/main/res/values/strings.xml
+++ b/android-app/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="guess_correct">Congratulations, you guessed the location!</string>
     <string name="guess_correct_points">You earned 10 studypoints.</string>
     <string name="guess_incorrect">Too bad, you did not guess the location.</string>
-    <string name="error_message">An error has occurred, please try again later.</string>
+    <string name="gps_warning">GPS is currently disabled, do you want to enable it?</string>
+    <string name="internet_warning">Internet is currently disabled, do you want to enable it?</string>
 </resources>
