--- a/android-app/app/src/main/res/values/strings.xml
+++ b/android-app/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
-    <string name="app_name">TU/e GO</string>
+    <string name="appName">TU/e GO</string>
     <string name="login">Log in</string>
-    <string name="registration_info">To register a new account, please fill in the boxes below.</string>
-    <string name="registration_warning">By clicking the Register button below, you accept to agree to the Terms and Conditions.</string>
-    <string name="code_info">A code has been sent to your email adress. Please fill in the sent code in the box below.</string>
-    <string name="change_password_info">To change your password, please fill in a new password in the boxes below.</string>
-    <string name="password_changed">Your password has been changed.</string>
-    <string name="guess_correct">Congratulations, you guessed the location!</string>
-    <string name="guess_correct_points">You earned 10 studypoints.</string>
-    <string name="guess_incorrect">Too bad, you did not guess the location.</string>
-    <string name="gps_warning">GPS is currently disabled, do you want to enable it?</string>
-    <string name="internet_warning">Internet is currently disabled, do you want to enable it?</string>
+    <string name="registrationInfo">To register a new account, please fill in the boxes below.</string>
+    <string name="registrationWarning">By clicking the Register button below, you accept to agree to the Terms and Conditions.</string>
+    <string name="codeInfo">A code has been sent to your email adress. Please fill in the sent code in the box below.</string>
+    <string name="changePasswordInfo">To change your password, please fill in a new password in the boxes below.</string>
+    <string name="passwordChanged">Your password has been changed.</string>
+    <string name="guessCorrect">Congratulations, you guessed the location!</string>
+    <string name="guessCorrectPoints">You earned 10 studypoints.</string>
+    <string name="guessIncorrect">Too bad, you did not guess the location.</string>
+    <string name="gpsWarning">GPS is currently disabled, do you want to enable it?</string>
+    <string name="internetWarning">Internet is currently disabled, do you want to enable it?</string>
 </resources>
