Created dialog fragments and deleted old pop-ups

--- a/android-app/app/src/main/res/values/strings.xml
+++ b/android-app/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <!-- General strings -->
     <string name="appName">TU/e GO</string>
     <string name="next">Next</string>
+    <string name="enable">Enable</string>
+    <string name="cancel">Cancel</string>
 
     <!-- Account details -->
     <string name="username">Username</string>
