--- a/android-app/app/src/main/res/values/strings.xml
+++ b/android-app/app/src/main/res/values/strings.xml
@@ -5,6 +5,12 @@
     <string name="enable">Enable</string>
     <string name="cancel">Cancel</string>
 
+    <!-- Data strings -->
+    <string name="dataPoints">Available points: %1$s</string>
+    <string name="dataAuthor">Author: %1$s</string>
+    <string name="dataTimeTaken">Picture taken at: %1$s</string>
+    <string name="dataTimeRemaining">Time left: %1$d:%2$d:%3$d:%4$d</string>
+
     <!-- Account details -->
     <string name="username">Name</string>
     <string name="emailAddress">Email Address</string>
