--- a/android-app/app/src/main/res/values/strings.xml
+++ b/android-app/app/src/main/res/values/strings.xml
@@ -4,12 +4,14 @@
     <string name="next">Next</string>
     <string name="enable">Enable</string>
     <string name="cancel">Cancel</string>
+    <string name="error">An error occurred</string>
 
     <!-- Data strings -->
     <string name="dataPoints">Available points: %1$s</string>
     <string name="dataAuthor">Author: %1$s</string>
     <string name="dataTimeTaken">Picture taken at: %1$s</string>
     <string name="dataTimeRemaining">Time left: %1$d:%2$02d:%3$02d:%4$02d</string>
+    <string name="dataTimeRemainingExpired">Expired!</string>
 
     <!-- Account details -->
     <string name="username">Name</string>
