--- a/android-app/app/src/main/res/values/strings.xml
+++ b/android-app/app/src/main/res/values/strings.xml
@@ -7,11 +7,9 @@
     <string name="error">An error occurred</string>
 
     <!-- Data strings -->
-    <string name="dataPoints">Available points: %1$s</string>
-    <string name="dataAuthor">Author: %1$s</string>
-    <string name="dataTimeTaken">Picture taken at: %1$s</string>
-    <string name="dataTimeRemaining">Time left: %1$d:%2$02d:%3$02d:%4$02d</string>
-    <string name="dataTimeRemainingExpired">Expired!</string>
+    <string name="dataPoints">Awards %1$s studypoints™</string>
+    <string name="dataAuthor">Taken by %1$s</string>
+    <string name="dataTimeTaken">Taken at %1$s</string>
 
     <!-- Account details -->
     <string name="username">Name</string>
@@ -47,16 +45,12 @@
     <string name="inboxTitle">Images</string>
 
     <!-- Inbox item -->
-    <string name="itemAuthor">Author:</string>
-    <string name="itemPoints">Points:</string>
-    <string name="itemTimeRemaining">Time left:</string>
-    <string name="itemTimeTaken">Time taken:</string>
-    <string name="itemPointsValue">10 points</string>
+    <string name="itemTimeTaken">Taken at </string>
 
     <!-- Inbox item activity -->
     <string name="feedImageDescription">Thumbnail of the picture</string>
-    <string name="inboxItemTitle">Challenge information</string>
-    <string name="inboxItemButton">Guess location</string>
+    <string name="inboxItemTitle">Challenge</string>
+    <string name="inboxItemButton">I\'m at the location</string>
 
     <!-- Post picture activity -->
     <string name="postPictureTitle">Post a picture</string>
@@ -66,7 +60,7 @@
 
     <!-- Correct guess pop-up -->
     <string name="guessCorrect">Congratulations, you found the picture!</string>
-    <string name="guessCorrectPoints">You earned 10 studypoints™.</string>
+    <string name="guessCorrectPoints">You earned 15 studypoints™</string>
 
     <!-- Incorrect guess pop-up -->
     <string name="guessIncorrect">Too bad, you did not guess the location.</string>
