--- a/android-app/app/src/main/res/values/strings.xml
+++ b/android-app/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="dataPoints">Awards %1$s studypoints™</string>
     <string name="dataAuthor">Taken by %1$s</string>
     <string name="dataTimeTaken">Taken at %1$s</string>
+    <string name="dataTimeRemaining">Time left: %1$d:%2$02d:%3$02d:%4$02d</string>
+    <string name="dataTimeRemainingExpired">Expired!</string>
 
     <!-- Account details -->
     <string name="username">Name</string>
